# BasicMatrix

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt  GeneralMatrixTests.cpp  MultiplayingTests.cpp  OperationTests.cpp  ScalarTests.cpp  SubtractingTests.cpp  TMatrix.cpp  TMatrix.hpp  mGTest.cpp  main.cc
test/: AddingTests.cpp  CMakeLists.txt  GeneralMatrixTests.cpp  MultiplayingTests.cpp  ScalarTests.cpp  SubtractingTests.cpp
tests/: AddingTests.cpp  MultiplayingTests.cpp  SubtractingTests.cpp
